<!--
  ~ Beedio is an Android app for downloading videos
  ~ Copyright (C) 2019 Loremar Marabillas
  ~
  ~ This program is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program; if not, write to the Free Software Foundation, Inc.,
  ~ 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<resources>
    <string name="app_name">Browser</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="switch_window">Switch</string>
    <string name="close_window">Close Window</string>
    <string name="reload_this_page">Reload this Page</string>
    <string name="bookmark_this_page">Bookmark this Page</string>
    <string name="turn_off_adblock">Turn off Adblock</string>
    <string name="new_window">New Window</string>
    <string name="browser_search_widget_hint">Type URL or Search</string>
    <string name="browser_search_close_content_desc">Close Search Widget</string>
    <string name="browser_webview_switcher_sheet_header">Switch To</string>
    <string name="found_videos_count_text" formatted="true">%1$d VIDEOS</string>
    <string name="bouncing_bug_icon_desc">Searching for videos</string>
    <string name="found_video_item_name" formatted="true">%1$s.%2$s</string>
    <string name="select">Select</string>
    <string name="all">All</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="queue">Queue</string>
    <string name="merge">Merge</string>
    <string name="enter_new_title">Enter new title…</string>
    <string name="more">MORE…</string>
    <string name="merge_success">Merge SUCCESS</string>
    <string name="merge_fail">Must select exactly 1 VIDEO-ONLY and 1 AUDIO-ONLY items of matching duration</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="title">Title:</string>
    <string name="url">Url:</string>
    <string name="destination_folder">Destination Folder:</string>
    <string name="create_new_folder">Create New Folder</string>
    <string name="page_save_into_bookmarks">Page saved into bookmarks.</string>
    <string name="all_formats">All Formats</string>
    <string name="extracting_links_for_all_formats">Extracting links for all formats:</string>
    <string name="unknown_size">unknown size</string>
</resources>
