<?xml version="1.0" encoding="utf-8"?><!--
  ~ Beedio is an Android app for downloading videos
  ~ Copyright (C) 2019 Loremar Marabillas
  ~
  ~ This program is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program; if not, write to the Free Software Foundation, Inc.,
  ~ 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/found_videos_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingTop="14dp"
        android:theme="@style/FoundVideosSheet">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/found_videos_head"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/found_videos_head_background"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="8dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:layout_marginTop="-14dp"
            android:animateLayoutChanges="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/found_videos_bouncy_icon"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:src="@drawable/ic_bouncing_bug"
                android:layout_marginTop="-14dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="7dp"
                android:layout_gravity="bottom"
                android:visibility="gone"
                android:contentDescription="@string/bouncing_bug_icon_desc" />

            <TextView
                android:id="@+id/found_videos_num_found_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_vertical"
                android:text=""
                android:textColor="@color/yellow"
                android:visibility="gone"
                android:fontFamily="serif" />

            <ImageView
                android:id="@+id/found_videos_close_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="8dp"
                android:padding="4dp"
                app:srcCompat="@drawable/ic_expand_more_white_24dp"
                android:visibility="gone"
                android:background="?found_video_close_btn_background" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/found_videos_body"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/black1"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/found_videos_head"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/found_videos_recycler_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/found_videos_toolbar"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/found_videos_toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/found_video_menu_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select"
                    android:theme="@style/FoundVideosSheet.ToolBarItem"
                    app:drawableTopCompat="@drawable/ic_touch_app_white_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/found_video_menu_all_formats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_formats"
                    android:theme="@style/FoundVideosSheet.ToolBarItem"
                    android:visibility="gone"
                    app:drawableTopCompat="@drawable/ic_all_formats"
                    app:layout_constraintEnd_toStartOf="@id/found_video_menu_select"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/found_video_menu_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:theme="@style/FoundVideosSheet.ToolBarItem"
                    android:visibility="gone"
                    app:drawableTopCompat="@drawable/ic_close_white_24dp"
                    app:layout_constraintStart_toEndOf="@id/found_video_menu_all"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/found_video_menu_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:theme="@style/FoundVideosSheet.ToolBarItem"
                    android:visibility="gone"
                    app:drawableTopCompat="@drawable/ic_check_all"
                    app:layout_constraintStart_toEndOf="@id/found_video_menu_delete"
                    app:layout_constraintEnd_toStartOf="@id/found_video_menu_cancel"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/found_video_menu_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:theme="@style/FoundVideosSheet.ToolBarItem"
                    android:visibility="gone"
                    app:drawableTopCompat="@drawable/ic_delete_white_24dp"
                    app:layout_constraintStart_toEndOf="@id/found_video_menu_queue"
                    app:layout_constraintEnd_toStartOf="@id/found_video_menu_all"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/found_video_menu_queue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/queue"
                    android:theme="@style/FoundVideosSheet.ToolBarItem"
                    android:visibility="gone"
                    app:drawableTopCompat="@drawable/ic_add_to_queue_white_24dp"
                    app:layout_constraintStart_toEndOf="@id/found_video_menu_merge"
                    app:layout_constraintEnd_toStartOf="@id/found_video_menu_delete"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/found_video_menu_merge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/merge"
                    android:theme="@style/FoundVideosSheet.ToolBarItem"
                    android:visibility="gone"
                    app:drawableTopCompat="@drawable/ic_found_video_merge_white_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/found_video_menu_queue"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>